finalizacao do modulo 3, injecao de dependencias com TSyringe
